improve responsiveness to http headers sent by providers
